--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/apex/log"
   version = "1.1.1"
+
+[[constraint]]
+  name = "github.com/go-chi/chi"
+  version = "4.0.2"
